--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/LoveIt"]
-	path = themes/LoveIt
-	url = https://github.com/dillonzq/LoveIt.git
+[submodule "themes/DoIt"]
+	path = themes/DoIt
+	url = git@github.com:HEIGE-PCloud/DoIt.git
